syntax = "proto3";

package cliente;

service ChunksUpload {
        rpc UploadChunk(stream Chunk) returns (UploadStatus) {}
        rpc Propuesta(Prop) returns (Accept){}
        rpc SendChunk(stream Chunk) returns (UploadStatus) {}
        
}


message Chunk {
        bytes Content = 1;
        string Name = 2;
}

message Prop {
        string Node = 1;
}

message Accept{
        bool Flag = 1;
}



enum UploadStatusCode {
        Unknown = 0;
        Ok = 1;
        Failed = 2;
}

message UploadStatus {
        string Message = 1;
        UploadStatusCode Code = 2;
}